# hns-local-copy

./: CLAUDE.md  Makefile  README.md  pyproject.toml
hns/: cli.py
tests/: conftest.py  test_cli.py  test_parakeet.py  test_utils.py  test_whisper.py
