[project]
name = "hns"
version = "1.0.9"
description = "A simple, privacy-focused speech-to-text CLI tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "click>=8.2.1",
    "faster-whisper>=1.1.1",
    "numpy>=2.2.6",
    "onnx-asr[cpu,hub]>=0.4.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.4",
    "rich>=13.0.0",
    "sounddevice>=0.5.2",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
cuda = [
    "onnxruntime-gpu>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/primaprashant/hns"
Issues = "https://github.com/primaprashant/hns/issues"

[project.scripts]
hns = "hns.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "Makefile",
  "uv.lock",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "TID", "PTH", "Q"]
